--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
+
   <body>
+
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
       </header>
+
       <div class="card">
         <div class="card-header">
           <h2>Generate a Password</h2>
@@ -28,7 +31,10 @@
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
+
     </div>
+
     <script src="script.js"></script>
+
   </body>
 </html>
